visual inventory pages

--- a/www/report/index.html
+++ b/www/report/index.html
@@ -8,10 +8,11 @@ redirect_from: /logos/links.html
 <h2>Logos</h2>
 
 <ul>
+    <li class="font-weight-bold">All: <a href="all-ar21.html">Logos</a> | <a href="all-icon.html">Icons</a> | <a href="all-tile.html">Tiles</a> | <a href="all-horizontal.html">Horizontal Logos</a> | <a href="all-wordmark.html">Wordmarks</a></li>
     <li><a href="inventory.html" rel="nofollow">Inventory</a> - list of every available logo.</li>
     <li><a href="missing.html" rel="nofollow">Missing Logos</a> - list of logos that do not have both rectangle and icon sizes.</li>
     <li>Tags: <a href="/logos/tags.html">Logos by Tag</a>, <a href="tags.html">Report</a> - Unfortunately, the tags aren't well maintained.</li>
-    <li><a style="font-weight: 900;" href="visual.html">Visual Inventory</a> - view <i>all</i> the logos at once (WARNING: a lot of images!).</li>
+    <li><a class="font-weight-bold" href="visual.html">Visual Inventory</a> - view <i>all</i> the logos at once (WARNING: a lot of images!).</li>
 </ul>
 
 <h2>Metadata</h2>
