tweaks to 'all' reports

--- a/www/report/index.html
+++ b/www/report/index.html
@@ -5,11 +5,23 @@ noindex: true
 redirect_from: /logos/links.html
 ---
 
+<div class="alert alert-warning">
+    WARNING!  These pages are responsive and I tried to make them look good on mobile devices.  But (there's always a "but") I have
+    made no attempt to make them bandwidth-friendly.  So... you probably want to make sure your phone is on WiFi.
+</div>
+
 <h2>Logos</h2>
 
 <ul>
-    <li class="font-weight-bold">All: <a href="all-ar21.html">Logos</a> | <a href="all-icon.html">Icons</a> | <a href="all-tile.html">Tiles</a> | <a href="all-horizontal.html">Horizontal Logos</a> | <a href="all-wordmark.html">Wordmarks</a></li>
-    <li><a href="inventory.html" rel="nofollow">Inventory</a> - list of every available logo.</li>
+    <li class="font-weight-bold">All by type:
+        <a href="all-ar21.html">Rectangular</a>
+        | <a href="all-icon.html">Icon</a>
+        | <a href="all-tile.html">Tile</a>
+        | <a href="all-horizontal.html">Horizontal</a>
+        | <a href="all-wordmark.html">Wordmarks</a>
+        | <a href="all-official.html">Official</a>
+    </li>
+    <li><a href="inventory.html" rel="nofollow">Inventory</a> - list (text) of every available logo.</li>
     <li><a href="missing.html" rel="nofollow">Missing Logos</a> - list of logos that do not have both rectangle and icon sizes.</li>
     <li>Tags: <a href="/logos/tags.html">Logos by Tag</a>, <a href="tags.html">Report</a> - Unfortunately, the tags aren't well maintained.</li>
     <li><a class="font-weight-bold" href="visual.html">Visual Inventory</a> - view <i>all</i> the logos at once (WARNING: a lot of images!).</li>
