--- a/www/report/all-official.html
+++ b/www/report/all-official.html
@@ -1,7 +1,7 @@
 ---
-title: 'All by Type: Tiles'
+title: 'All by Type: Official'
 layout: default
-targetsuffix: '-tile'
+targetsuffix: '-official'
 style: 'height: 64px'
 ---
 {% include all-paged.html %}
