remove search-github and point everything to search.vectorlogo.zone

--- a/www/index.html
+++ b/www/index.html
@@ -232,7 +232,7 @@ $(function() {
 			} 
 			else 
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  You can try <a href="/search-github.html?q=' + encodeURIComponent(query) + '">searching other logo sites</a>.</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  You can try <a href="https://search.vectorlogo.zone/?q=' + encodeURIComponent(query) + '">searching other logo sites</a>.</div>');
 			}
 		});
 	}
