changed all search references to point to awesomelogos

--- a/www/index.html
+++ b/www/index.html
@@ -232,7 +232,7 @@ $(function() {
 			} 
 			else 
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  You can try <a href="https://search.vectorlogo.zone/?q=' + encodeURIComponent(query) + '">searching other logo sites</a>.</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Try searching at <a href="https://www.awesomelogos.org/search.html?q=' + encodeURIComponent(query) + '">Awesome Logos</a>!</div>');
 			}
 		});
 	}
