--- a/www/search-github.html
+++ b/www/search-github.html
@@ -2,5 +2,5 @@
 layout: default
 noindex: true
 title: Search Github
-redirect_to: 'https://search.vectorlogo.zone/'
+redirect_to: 'https://www.awesomelogos.org/search.html'
 ---
