removed references to old search page

--- a/www/about.html
+++ b/www/about.html
@@ -93,7 +93,7 @@ Want to help?  There are {{ pendingcount | intcomma }} logos in the <a href="/re
                 <p class="card-text">Full-text search with instant visual results.</p>
             </div>
             <div class="card-footer">
-                <a href="/search.html" class="btn btn-success btn-block">Instant Search</a>
+                <a href="/index.html" class="btn btn-success btn-block">Instant Search</a>
             </div>
         </div>
         <div class="card">
