--- a/www/report/first-letter.html
+++ b/www/report/first-letter.html
@@ -49,7 +49,7 @@ redirect_from: /logos/missing.html
 {%- endfor %}
 {%- assign uniqueletter = uniqueletter | plus: 1 %}
         <tr>
-            <td><a href="/search.html?q={{previousStart}}">{{previousStart}}</a></td>
+            <td><a href="/index.html?q={{previousStart}}">{{previousStart}}</a></td>
             <td>{{ donecount | intcomma }}</td>
             <td>{{ pendingcount | intcomma }}</td>
             <td>{{ lettercount | intcomma }}</td>
