--- a/www/index.html
+++ b/www/index.html
@@ -38,7 +38,16 @@ redirect_from:
         <ul id="pending"></ul>
     </div>
 </div>
-
+{%- comment %}NOTE: this is random at *build time*, so a given deploy will always have the same set of logos (which is the desired result) {% endcomment %}
+{%- assign sorted_pages = site.pages | where_exp:"item","item.logohandle" | sort:'sort' %}
+{%- assign all = "" | split: '' %}
+{%- for logopage in sorted_pages %}
+    {%- capture logofile %}{{ logopage.logohandle }}{{ '-ar21.svg' }}{% endcapture -%}
+    {%- if logopage.images contains logofile %}
+        {%- assign all = all | push: logopage.logohandle %}
+    {%- endif %}
+{%- endfor %}
+{%- assign default_logos = all | sample: 48 %}
 <script src="/js/lunr.min.js"></script>
 <script>
 $(function() {
@@ -54,48 +63,7 @@ $(function() {
 		});
 	window.idx.pipeline.remove(lunr.stopWordFilter);
 
-	window.default_logos = [
-        'arduino',
-        'haxe',
-        'travis-ci',
-        'theorchard',
-        'npr',
-        'apache_storm',
-        'stackoverflow',
-        'mint',
-        'septa',
-        'teamtreehouse',
-        'openlibrary',
-        'aquasec',
-        'symantec',
-        'bazel',
-        'numerify',
-        'fastly',
-        'digitalrosetta',
-        'js_webpack',
-        'sendwyre',
-        'kik',
-        'jenkins',
-        'pbs',
-        'microsoft',
-        'airtable',
-        'docker',
-        'getmonero',
-        'purplejsio',
-        'linux',
-        'infernojs',
-        'flickr',
-        'wireshark',
-        'wikipedia',
-        'microsoft_azure',
-        'ocaml',
-        'stitchdata',
-        'konghq',
-        'worldlabel',
-        'youtube',
-        'stride',
-        'opensource'
-    ];
+	window.default_logos = [{%- for logohandle in default_logos %} "{{logohandle}}"{% unless forloop.last %},{% endunless %}{%- endfor %} ];
 
 	// Download the data from the JSON file we generated
 	window.data = $.getJSON('/util/fulltext.json');
