--- a/www/report/unknown-meta.html
+++ b/www/report/unknown-meta.html
@@ -5,10 +5,10 @@ noindex: true
 ---
 <p>Logos with unknown entries in their metadata</p>
 
-{%- assign stdmeta = 'colors font guide images keywords logohandle notes redirect_from sort tags title website wikipedia' | split: ' ' %}
+{%- assign stdmeta = 'colors font guide images keywords logohandle noindex notes posted redirect_from sort tags title website wikipedia' | split: ' ' %}
 {%- assign jekyllmeta = 'content dir layout name path url' | split: ' ' %}
 {%- assign stdmeta = stdmeta | concat:jekyllmeta %}
-{%- assign todometa = 'discord discourse dockerhub dribbble flickr gitter glassdoor medium meetup slack slideshare soundcloud stackexchange stackoverflow vimeo vine weibo xing' | split: ' ' %}
+{%- assign todometa = 'angellist behance discord discourse dockerhub dribbble flickr flipboard gitter glassdoor keypass mastodon medium meetup opencollective slack slideshare snapchat soundcloud stackexchange stackoverflow vimeo vine weibo xing' | split: ' ' %}
 {%- assign stdmeta = stdmeta | concat:todometa %}
 {%- for sm in site.data.socialmedia %}
     {%- assign smid = sm.id | split:' ' %}
