--- a/www/report/missing.html
+++ b/www/report/missing.html
@@ -10,6 +10,7 @@ redirect_from: /logos/missing.html
 {%- assign logocount = 0 %}
 {%- assign svgporncount = 0 %}
 {%- assign guidecount = 0 %}
+{%- assign othertotal = 0 %}
 
 <table class="table table-striped table-bordered">
     <thead>
@@ -35,13 +36,14 @@ redirect_from: /logos/missing.html
             {%- assign othercount = logopage.images | size -%}
             {%- if logopage.images contains logoar21 %}{% assign othercount = othercount | minus:1 %}{% endif -%}
             {%- if logopage.images contains logoicon %}{% assign othercount = othercount | minus:1 %}{% endif -%}
+            {%- assign othertotal = othertotal | plus:othercount -%}
         <tr>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell"><a href="{{logopage.url}}{{site.indexpage}}" rel="nofollow">{{logopage.logohandle}}</a></td>
             <td><a href="{{logopage.url}}{{site.indexpage}}">{{logopage.title | default: "(untitled)"}}</a></td>
             <td>{% unless logopage.images contains logoicon %}MISSING{% endunless %}</td>
             <td>{% unless logopage.images contains logoar21 %}MISSING{% endunless %}</td>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell">{% if othercount > 0 %}{{othercount}}{% endif %}</td>
-            <td class="text-center d-none d-lg-table-cell d-print-table-cell" id="pending-{{logopage.logohandle}}"></td>
+            <td class="text-center d-none d-lg-table-cell d-print-table-cell" id="contrib-{{logopage.logohandle}}"></td>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell">
                 {%- if logopage.guide %}{%- assign guidecount = guidecount | plus:1 %}<a href="{{logopage.guide}}"><i class="fa fa-certificate"></i></a>{% endif -%}
             </td>
@@ -69,7 +71,10 @@ redirect_from: /logos/missing.html
             <td></td>
             <td></td>
             <td></td>
-            <td class="text-center d-none d-lg-table-cell d-print-table-cell"></td>
+            <td class="text-center d-none d-lg-table-cell d-print-table-cell">{{othertotal}}</td>
+            <td class="text-center d-none d-lg-table-cell d-print-table-cell" id="contribcount">
+                <img src="/images/spinner.svg" style="height: 1.5em;" />
+            </td>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell">{{guidecount}}</td>
             <td class="text-center d-none d-lg-table-cell d-print-table-cell">{{svgporncount}}</td>
         </tr>
@@ -89,14 +94,16 @@ redirect_from: /logos/missing.html
             success: function (data, status, xhr) {
                 console.log("data=" + JSON.stringify(data));
                 if (data.success) {
-                    for (var loop in data.data) {
-                        var result = data.data[loop];
-                        $(`.pending-${result.logohandle}`).append($("<a>").attr("href", `https://upload.vectorlogo.zone/upload/${result.logohandle}/index.html`).attr("title", "User submissions").text(result.count));
+                    for (const result of data.data) {
+                        $(`#contrib-${result.logohandle}`).append($("<a>").attr("href", `https://upload.vectorlogo.zone/logos/${result.logohandle}/index.html`).attr("title", "User submissions").text(result.count));
                     }
+                    $("#contribcount").empty().text(data.count);
+                } else {
+                    $("#contribcount").empty().text("0");
                 }
             },
             timeout: 15000,
-            url: "https://upload.vectorlogo.zone/public/pending.json"
+            url: "https://upload.vectorlogo.zone/logos/pending.json"
         });
     });
 
