changed awesomelogos to logosear.ch

--- a/www/search-other.html
+++ b/www/search-other.html
@@ -2,5 +2,5 @@
 layout: default
 title: Search Other Websites
 noindex: true
-redirect_to: 'https://www.awesomelogos.org/sources/index.html'
+redirect_to: 'https://logosear.ch/alternatives/index.html'
 ---
