--- a/www/index.html
+++ b/www/index.html
@@ -203,7 +203,7 @@ $(function() {
 			} 
 			else 
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Try searching at <a href="https://www.awesomelogos.org/search.html?q=' + encodeURIComponent(query) + '">Awesome Logos</a>!</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Try searching at <a href="https://logosear.ch/search.html?q=' + encodeURIComponent(query) + '">LogoSear.ch</a>!</div>');
 			}
 		});
 	}
