fixed spelling of consistent

--- a/www/support/guidelines.html
+++ b/www/support/guidelines.html
@@ -17,7 +17,7 @@ directory and logo handle should be <code>getbootstrap</code>.</p>
 
 <h2>Image guidelines</h2>
 
-<p>One of the key reasons for VectorLogoZone is a visually consistant look.  These are the guidelines for making images.</p>
+<p>One of the key reasons for VectorLogoZone is a visually consistent look.  These are the guidelines for making images.</p>
 
 <p>Detailed rules:</p>
 <ul>
