--- a/www/support/index.html
+++ b/www/support/index.html
@@ -70,7 +70,7 @@ redirect_from:
     <div class="col-md-12">
         <h3>These images suck!  Can't you do any better?</h3>
         <p>I am definitely <i>not</i> an artist, and generally do not do anything besides resize and rearrange existing artwork.</p>
-        <p>It can often be difficult to get the images to looks nice on their own and look good and consistant with the rest of the images.</p>
+        <p>It can often be difficult to get the images to looks nice on their own and look good and consistent with the rest of the images.</p>
         <p>(and see the next question!)</p>
     </div>
 </div>
