--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -64,11 +64,11 @@ layout: none
             <div class="btn-group d-none d-md-inline-flex" role="group" aria-label="Border">
                 <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
                 <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="image_dim" title="Dimensions" data-toggle="popover" data-title="Image Dimensions" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/ruler-triangle-solid.svg" /></i></button>
-                <a type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="btn-download" title="Edit on Vecta.io"><img class="toolbar" src="/images/toolbar/edit-solid.svg" /></i></a>
+                <a type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="btn-download" title="Edit on Vecta.io" rel="nofollow"><img class="toolbar" src="/images/toolbar/edit-solid.svg" /></i></a>
             </div>
             <a class="btn btn-outline-dark navbar-btn d-none d-md-block" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
             <a class="btn btn-outline-dark navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
-			
+
 			<p class="navbar-text mb-0 navbar-right d-none d-lg-block"><a href="/index.html" class="navbar-link">Vector Logo Zone</a></p>
 		</div>
 	</nav>
