UPDATE: refer to LogoSearch with space in name

--- a/www/index.html
+++ b/www/index.html
@@ -202,7 +202,7 @@ $(function() {
 			}
 			else
 			{
-				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Try searching at <a href="https://logosear.ch/search.html?q=' + encodeURIComponent(query) + '">LogoSear.ch</a>!</div>');
+				$search_results.html('<div class="alert alert-warning">No results found for "' + htmlEncode(query) + '".  Try searching at <a href="https://logosear.ch/search.html?q=' + encodeURIComponent(query) + '">Logo Search</a>!</div>');
 			}
 		});
 	}
