--- a/www/util/random-icon.html
+++ b/www/util/random-icon.html
@@ -14,13 +14,20 @@ noindex: true
     <script src="/js/jquery-3.3.1.min.js"></script>
     <style type="text/css">
         html, body { width: 100%; height: 100% }
-        #preview-container { width: 100%; height:100%;background-image: url("/images/preview/background_light.png"); background-repeat: repeat-x repeat-y;}
-        #xpreview-container { position: relative;}
+        #preview-container { 
+            width: 100%; 
+            height:100%;
+            padding: 20px;
+            background-image: url("/images/preview/background_light.png"); 
+            background-repeat: repeat-x repeat-y;
+        }
+         #xpreview-container { position: relative;}
         #preview-container img {
             background-color: white;
             box-shadow: 0 0 5px #1d1d1d;
             border: solid #ccc 1px;
             margin: 10px 0px 0px 10px;
+            padding: 5px;
         }
     </style>
 </head>
