--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,7 @@ redirect_from:
 {%- assign default_logos = all | sample: 48 %}
 <script src="/js/lunr.min.js"></script>
 <script>
+/*<![CDATA[*/
 $(function() {
 	// Initalize lunr with the fields it will be searching on. I've given title
 	// a boost of 10 to indicate matches on this field are more important.
@@ -219,4 +220,5 @@ $(function() {
         }
     }
 });
+/*]]>*/
 </script>
