--- a/www/util/preview.html
+++ b/www/util/preview.html
@@ -62,9 +62,9 @@ layout: none
 </div>
 
             <div class="btn-group d-none d-md-inline-flex" role="group" aria-label="Border">
-                <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></a>
-                <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="image_dim" title="Dimensions" data-toggle="popover" data-title="Image Dimensions" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/ruler-triangle-solid.svg" /></i></button>
-                <a type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="btn-download" title="Edit on Vecta.io" rel="nofollow"><img class="toolbar" src="/images/toolbar/edit-solid.svg" /></i></a>
+                <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="color_analysis" title="Color Analysis" data-toggle="popover" data-title="Color Analysis" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/color_palette.svg" /></button>
+                <button type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="image_dim" title="Dimensions" data-toggle="popover" data-title="Image Dimensions" data-html="true" data-placement="bottom" data-popped="0"><img class="toolbar" src="/images/toolbar/ruler-triangle-solid.svg" /></button>
+                <a type="button" class="btn btn-outline-dark navbar-btn d-none d-sm-block" id="btn-download" title="Edit on Vecta.io" rel="nofollow"><img class="toolbar" src="/images/toolbar/edit-solid.svg" /></a>
             </div>
             <a class="btn btn-outline-dark navbar-btn d-none d-md-block" id="btn-download" title="Download"><i class="fa fa-download"></i></a>
             <a class="btn btn-outline-dark navbar-btn" href="/" id="btn-exit" title="Exit Preview"><i class="fa fa-sign-out"></i></a>
@@ -77,6 +77,8 @@ layout: none
 	</div><!--/container-->
 {% include google-analytics.html %}
 <script>
+/*<![CDATA[*/
+
 	function qsParam(key) {
 	    key = key.replace(/[*+?^$.\[\]{}()|\\\/]/g, "\\$&"); // escape RegEx meta chars
 	    var match = location.search.match(new RegExp("[?&]"+key+"=([^&]+)(&|$)"));
@@ -237,7 +239,7 @@ layout: none
         */
 		$(window).bind('resize', resizeBody);
 	});
-
+/*]]>*/
 </script>
 </body>
 </html>
