--- a/www/util/random-ar21.html
+++ b/www/util/random-ar21.html
@@ -37,6 +37,7 @@ noindex: true
 {% include google-analytics.html %}
 {% assign sorted_pages = site.pages | sort:'sort' %}
 <script>
+/*<![CDATA[*/
 
     // from https://www.frankmitchell.org/2015/01/fisher-yates/
     function shuffle(array) {
@@ -69,7 +70,7 @@ noindex: true
             }
         }
     });
-
+/*]]>*/
 </script>
 </body>
 </html>
