--- a/www/util/random-icon.html
+++ b/www/util/random-icon.html
@@ -38,6 +38,7 @@ noindex: true
 {% include google-analytics.html %}
 {% assign sorted_pages = site.pages | sort:'sort' %}
 <script>
+/*<![CDATA[*/
 
     // from https://www.frankmitchell.org/2015/01/fisher-yates/
     function shuffle(array) {
@@ -70,7 +71,7 @@ noindex: true
             }
         }
     });
-
+/*]]>*/
 </script>
 </body>
 </html>
