FIX: html error on home page

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@ redirect_from:
                 <li><a class="alert-link" href="javascript:location.reload();">Reload the page</a></li>
                 <li>Browsing the <a class="alert-link" href="/logos/index.html">A-Z list</a></li>
                 <li>Searching with <a class="alert-link" href="https://logosear.ch/">LogoSearch</a></li>
-                <li>Letting me know via the <a class="alert-link" href="/support/contact.html">contact page</li>
+                <li>Letting me know via the <a class="alert-link" href="/support/contact.html">contact page</a></li>
             </ul>
         </div>
     </div>
