UPDATE: tweak noscript blurb on home page

--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,9 @@ redirect_from:
             Please wait...  If you have JavaScript disabled or 
             the index never finishes loading, please try 
             <ul>
-                <li><a class="alert-link" href="javascript:location.reload();">Reload the page</a></li>
-                <li>Browsing the <a class="alert-link" href="/logos/index.html">A-Z list</a></li>
-                <li>Searching with <a class="alert-link" href="https://logosear.ch/">LogoSearch</a></li>
+                <li><a class="alert-link" href="javascript:location.reload();">Reloading this page</a> - only if you have JavaScript enabled</li>
+                <li>Browsing the <a class="alert-link" href="/logos/index.html">A-Z list</a> - works without JavaScript, but so many SVGs can crash your browser</li>
+                <li>Searching with <a class="alert-link" href="https://logosear.ch/">LogoSearch</a> - works without JavaScript</li>
                 <li>Letting me know via the <a class="alert-link" href="/support/contact.html">contact page</a></li>
             </ul>
         </div>
